[package]
name = "prism-query"
version = "0.1.0"
edition = "2021"
description = "Prism query orchestration — virtual field injection and sensor table materialization (S-2.08). PrismQL parser (S-3.01) and DataFusion TableProvider integration (S-3.02)."
license = "MIT"
publish = false

# ARCHITECTURE COMPLIANCE (S-2.08):
# This crate MUST NOT depend on datafusion, arrow, arrow-schema, or arrow2
# for S-2.08 purposes. Those dependencies are added in S-3.02.
#
# ARCHITECTURE COMPLIANCE (S-3.01):
# Parser modules (filter_parser, sql_parser, pipe_parser, security) MUST NOT
# import from prism-sensors, prism-mcp, or any I/O crate. Parsing is a pure
# function: &str -> Result<Ast, Vec<ParseError>>. See S-3.01 §Architecture
# Compliance Rules.

[lib]
name = "prism_query"

[dependencies]
prism-core = { path = "../prism-core" }
prism-storage = { path = "../prism-storage" }
prism-spec-engine = { path = "../prism-spec-engine" }
prism-sensors = { path = "../prism-sensors" }
prism-ocsf = { path = "../prism-ocsf" }
prism-credentials = { path = "../prism-credentials" }
# S-3.04 — alias system: ConfirmationToken (BC-2.11.014), FeatureFlagEvaluator (BC-2.11.008)
prism-security = { path = "../prism-security" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# S-2.08 — UUID v7 generation for org-scoped CrowdStrike pagination session IDs (D-048).
# S-3.05 — v4 added for CursorToken::new_random() (BC-2.07.001).
uuid = { version = "1", features = ["v7", "v4"] }
# S-3.01 — PrismQL parser combinators (filter/SQL/pipe modes) with error recovery.
chumsky = "0.12"
# S-3.01 — human-readable parse error formatting (JSON-serializable for MCP responses).
ariadne = "0.4"
# S-3.01 AST redesign — CIDR literal validation (CWE-20). ipnet::IpNet::from_str
# validates at parse time, preventing malformed CIDR strings from reaching the executor.
ipnet = { version = "2", features = ["serde"] }
# S-3.01 AST redesign — Eq/Hash on Literal::Float(f64) via ordered bit-level comparison.
# Two floats are "AST-equal" iff their bit representations are equal (NaN != NaN by design).
ordered-float = { version = "2", features = ["serde"] }
# S-3.01 AST redesign — regex validation at parse time (CWE-1333); same engine as prism-core.
regex = "1"
# S-3.01 fix-pass — parse-time validation for TimestampLiteral (ISO-8601 / RFC-3339).
# chrono is already used across the workspace (prism-core, prism-audit, prism-mcp, etc.);
# using the same crate avoids duplicate transitive deps.
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
# S-3.02 — DataFusion in-process SQL engine, MemTable, SessionContext (BC-2.11.005).
datafusion = "53.1"
# S-3.02 — Arrow RecordBatch, Schema, array builders for virtual fields (BC-2.11.012).
# datafusion 53.1 uses arrow 58 (transitive); pinned here for explicit awareness.
arrow = { version = "58", features = ["prettyprint"] }
# S-3.02 — Async runtime: spawn for fan-out tasks, timeout for 30s execution limit.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
# S-3.02 — Structured spans: per-query, per-source, per-client (BC-2.11.005).
tracing = "0.1"
# S-3.02 — Async trait methods for DataFusion TableProvider (scan, etc.).
async-trait = "0.1"
# S-3.05 — TTL-based LRU response cache with async-safe eviction (BC-2.07.003/006).
moka = { version = "0.12", features = ["sync"] }
# S-3.05 — SHA-256 cache key derivation (BC-2.07.005 / VP-025).
sha2 = "0.10"
# S-3.05 fix-pass CR-002 — CancellationToken for cursor cleanup task shutdown signal.
# tokio-util is already a transitive dep via datafusion 53.1; this is a direct pin
# to make the dependency explicit. CancellationToken has no feature gate in 0.7.x.
tokio-util = { version = "0.7", default-features = false }

[dev-dependencies]
# S-2.08 — isolation tests: LruCache mirrors prism-dtu-crowdstrike session_registry (dev-only)
lru = "0.17"
# S-3.02 VP-031 — proptest property tests: REQUIRED columns always push-down (BC-2.11.007).
# S-3.06 — property-based tests for write-mode AST round-trips (VP-021 corpus extension)
proptest = "1.11"

# S-3.01 VP-014/VP-015 — bounded model checking proofs (exact pin; out-of-band nightly
# toolchain; does not affect workspace MSRV of Rust 1.85).
# Gated to non-Windows because kani-verifier 0.67 uses std::os::unix::* (CommandExt::arg0,
# fs::symlink) which don't exist on Windows. Kani itself is Linux/macOS-only; the proof
# modules in src/proofs/ are #[cfg(kani)]-gated so they never compile in regular cargo
# test. Removing this from the Windows dep graph unblocks `cargo test --workspace` on
# x86_64-pc-windows-msvc without affecting Kani verification on supported platforms.
[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
kani-verifier = "=0.67.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
non_snake_case = "allow"

[lints.clippy]
await_holding_lock = "deny"
unwrap_used = "deny"
expect_used = "deny"
