[package]
name = "prism-security"
version = "0.1.0"
edition = "2021"
description = "Prism security subsystem — prompt injection defense, trust levels, output schemas (SS-09)"
license = "MIT"
publish = false

[lib]
name = "prism_security"

[features]
default = ["read-all"]
read-all = []

[dependencies]
prism-core = { path = "../prism-core", version = "0.1.0" }
regex = "1"
once_cell = "1"
unicode-normalization = "0.1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
proptest = "1"
serde_json = "1"

[lints]
workspace = true
