[package]
name = "prism-security"
version = "0.1.0"
edition = "2021"
description = "Prism security subsystem — feature flags, capability gating, prompt injection defense (SS-04 + SS-09)"
license = "MIT"
publish = false

[lib]
name = "prism_security"

# ─── Compile-time write feature gates (BC-2.04.001) ─────────────────────────
# Write operation code families are entirely absent from the binary unless
# the corresponding feature is explicitly enabled at build time.
# This is Tier 1 of the two-tier write gate (VP-020).
[features]
default = ["read-all"]
read-all = []
crowdstrike-write = []
cyberint-write = []
claroty-write = []
armis-write = []
all-write = ["crowdstrike-write", "cyberint-write", "claroty-write", "armis-write"]

[dependencies]
prism-core = { path = "../prism-core", version = "0.2.0" }
arc-swap = "1"
dashmap = "5"
rand = "0.8"
regex = "1"
once_cell = "1"
sha2 = "0.10"
unicode-normalization = "0.1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
proptest = "1"
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.clippy]
# From workspace
await_holding_lock = "deny"
# Test files use .unwrap() by design — test-writer generated them;
# cannot be modified per story constraints. Allow so -D warnings passes test binaries.
unwrap_used = "allow"

[lints.rust]
# From workspace
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(feature, values("read-all", "crowdstrike-write", "cyberint-write", "claroty-write", "armis-write", "all-write"))'] }
# Test files use BC-style naming (test_BC_2_04_NNN_... / test_BC_2_09_NNN_...) — generated by test-writer.
non_snake_case = "allow"
# Test files import items used only in certain cfg combinations.
unused_imports = "allow"
# proptest! macro expansion triggers unused doc comment warnings in test files.
unused_doc_comments = "allow"
