[package]
name = "prism-spec-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Prism config-driven sensor adapter engine: TOML spec loading, pipeline execution, OCSF mapping, infusion enrichment framework, and WASM plugin runtime (S-1.15)"

# ARCHITECTURE COMPLIANCE: prism-spec-engine MUST NOT depend on datafusion or arrow.
# Any addition of those deps MUST fail CI lint (cargo deny or equivalent).
# See architecture/module-decomposition.md SS-16; AD-015.

[dependencies]
prism-core = { path = "../prism-core", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
percent-encoding = "2"
thiserror = "1"
serde_json = "1"
regex = "1"
arc-swap = "1"
sha2 = "0.10"
lru = "0.17"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1"

# Infusion Enrichment Framework (S-1.14 / SS-19)
lru = "0.17"

# WASM Plugin Runtime (S-1.15 / SS-17 / AD-019)
# wasmtime 44 resolves 17 RUSTSEC advisories (RUSTSEC-2024-0438 through RUSTSEC-2026-0096)
wasmtime = { version = "44", features = ["component-model"] }
notify = "7"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
bincode = "2"
anyhow = "1"

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
wat = "1"
tempfile = "3"

[features]
default = []

[lints.rust]
# Allow #[cfg(kani)] without a registered cfg — kani is not a Cargo feature
# kani is invoked via `cargo kani` which sets cfg(kani) automatically.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
# Test functions use BC-ID naming convention; cannot modify.
non_snake_case = "allow"

[lints.clippy]
# From workspace lints
await_holding_lock = "deny"
# Test files use .unwrap()/.unwrap_err() by design — test-writer generated them.
unwrap_used = "allow"

[[test]]
name = "infusion_tests"
path = "tests/infusion_tests.rs"
