[package]
name = "prism-spec-engine"
version = "0.6.0"
edition = "2024"
license = "MIT"
description = "Prism config-driven sensor adapter engine: TOML spec loading, pipeline execution, OCSF mapping, infusion enrichment framework, WASM plugin runtime (S-1.15), and hot reload + runtime management (S-1.12)"

# ARCHITECTURE COMPLIANCE: prism-spec-engine MUST NOT depend on datafusion or arrow.
# Any addition of those deps MUST fail CI lint (cargo deny or equivalent).
# See architecture/module-decomposition.md SS-16; AD-015.

[dependencies]
prism-core = { path = "../prism-core", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
percent-encoding = "2"
thiserror = "1"
serde_json = "1"
regex = "1"
arc-swap = "1"
sha2 = "0.10"
hex = "0.4"
# uuid v7 for time-ordered confirmation tokens (TD-S112-001)
uuid = { version = "1", features = ["v7"] }
lru = "0.17"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1"

# WASM Plugin Runtime (S-1.15 / SS-17 / AD-019)
# wasmtime 44 resolves 17 RUSTSEC advisories (RUSTSEC-2024-0438 through RUSTSEC-2026-0096)
wasmtime = { version = "44", features = ["component-model"] }
# notify: cross-platform filesystem event watcher (AD-018 / S-1.12 / S-1.15)
notify = "7"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "gzip", "deflate", "brotli"], default-features = false }
bincode = "2"
anyhow = "1"

[dev-dependencies]
# Self-referential dep to enable test-helpers feature for integration test binaries.
# Integration tests (tests/*.rs) link against the library and use NullAuthProvider /
# MockAuthProvider — they are NOT under cfg(test) in the lib, so the feature must
# be enabled explicitly. NEVER add test-helpers to [dependencies].
prism-spec-engine = { path = ".", features = ["test-helpers"] }
proptest = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
wat = "1"
tempfile = "3"
# S-PLUGIN-PREREQ-B: wiremock for VP-PLUGIN-002 and VP-PLUGIN-005 integration tests.
# Version pinned to match prism-sensors usage (R-PB-006 known gap, now resolved).
wiremock = "0.6"
# flate2: gzip compression for F-LP5-MED-001 regression test (encode mock gzip response bodies).
flate2 = "1"
# tracing-subscriber: structured log capture for audit-log regression tests.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
# Exposes NullAuthProvider + MockAuthProvider for downstream test crates.
# NEVER enable in production deps — these types bypass real auth.
test-helpers = []

[lints.rust]
# Allow #[cfg(kani)] without a registered cfg — kani is not a Cargo feature
# kani is invoked via `cargo kani` which sets cfg(kani) automatically.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
# Test functions use BC-ID naming convention; cannot modify.
non_snake_case = "allow"

[lints.clippy]
# From workspace lints
await_holding_lock = "deny"
# Test files use .unwrap()/.unwrap_err() by design — test-writer generated them.
unwrap_used = "allow"

[[test]]
name = "infusion_tests"
path = "tests/infusion_tests.rs"

[[test]]
name = "hot_reload_tests"
path = "tests/hot_reload_tests.rs"

# S-PLUGIN-PREREQ-B: VP-PLUGIN-002 wiremock integration tests
[[test]]
name = "pipeline_http_integration"
path = "tests/pipeline_http_integration.rs"

# S-PLUGIN-PREREQ-B: VP-PLUGIN-005 401-retry integration tests
[[test]]
name = "pipeline_oauth_retry"
path = "tests/pipeline_oauth_retry.rs"

# S-PLUGIN-PREREQ-C: AC-1 Red Gate — page_size on CursorToken first-call
[[test]]
name = "ac_1_cursor_page_size_test"
path = "tests/ac_1_cursor_page_size_test.rs"

# S-PLUGIN-PREREQ-C: AC-3 Red Gate — proptest suite for pure functions
[[test]]
name = "proptest_AC_3"
path = "tests/proptest_AC_3.rs"
