[package]
name = "prism-storage"
version = "0.1.0"
edition = "2021"
description = "Prism storage engine abstraction — RocksDB backend with domain isolation"
license = "MIT"
publish = false

[lib]
name = "prism_storage"

[features]
# Enable InMemoryBackend for downstream crate test suites.
# Usage: prism-storage = { ..., features = ["test-utils"] }
test-utils = []

[dependencies]
prism-core = { path = "../prism-core", version = "0.1.0" }
rocksdb = { version = "0.24", optional = true }
bincode = { version = "2", optional = true }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

[dev-dependencies]
proptest = "1.11.0"
tempfile = "3"

[lints.rust]
# From workspace lints (workspace = true cannot be combined with overrides).
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
# S-1.02 test functions use BC-ID naming convention (e.g. test_BC_S_02_vp055_*).
# The test-writer generated these names; this crate cannot modify them.
non_snake_case = "allow"

[lints.clippy]
# From workspace lints
await_holding_lock = "deny"
# Test code uses .unwrap() by design.
unwrap_used = "allow"
