[package]
name = "prism-storage"
version = "0.1.0"
edition = "2021"
description = "Prism storage engine abstraction — RocksDB backend with domain isolation"
license = "MIT"
publish = false

[lib]
name = "prism_storage"

[features]
# Enable InMemoryBackend for downstream crate test suites.
# Usage: prism-storage = { ..., features = ["test-utils"] }
test-utils = []

[dependencies]
prism-core = { path = "../prism-core", version = "0.1.0" }
rocksdb = { version = "0.24" }
bincode = { version = "2", features = ["serde"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros"] }
# S-2.02: cross-platform memory measurement for ResourceWatchdog (BC-2.15.006)
sysinfo = { version = "0.30" }
# S-2.02: CancellationToken for watchdog query termination (BC-2.15.007)
tokio-util = { version = "0.7", features = ["rt"] }
# S-2.02: concurrent query token registry for ResourceWatchdog (BC-2.15.007)
dashmap = { version = "5" }

[dev-dependencies]
proptest = "1.11.0"
tempfile = "3"

# Enable test-only helpers (InMemoryBackend, open_excluding_domain) for
# integration tests in tests/integration.rs.
[dev-dependencies.prism-storage]
path = "."
features = ["test-utils"]

[lints.rust]
# From workspace lints (workspace = true cannot be combined with overrides).
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
# S-1.02 test functions use BC-ID naming convention (e.g. test_BC_S_02_vp055_*).
# The test-writer generated these names; this crate cannot modify them.
non_snake_case = "allow"

[lints.clippy]
# From workspace lints
await_holding_lock = "deny"
# Test code uses .unwrap() by design.
unwrap_used = "allow"
